Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14814

QHeaderView: when dragging a section into the position that would make it the last column, dropping the section does not always work or requires the user to drag beyond the range of the widget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 4.7.0
    • Widgets: Itemviews
    • None
    • Windows
    • d625535728154fc9ca576bf6472c6b5057a96f17, 7080cc765c9566e852797dbaf60fe50a2fcc2b72

    Description

      To reproduce this, the simpledommodel example can be used. Resize the window so that the horizontal scroll bar appears and the last column is hidden from view then try dragging the left most section (column 0) so that it appears on the right most position. The user is required to drag further than the width of the widget to get the section to drop into the end position.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            cattell Matthew Cattell (Inactive)
            Votes:
            10 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes