QHeaderView 5.0 - correct drop on manual QHeaderView sectionmove

This fixes an error in the calculation of the exact drop position
when an user is moving a section in QHeaderView.

Before we compared a mouse-position local to the widget
(pos) with a summed length of sections (posThreshold).

However we need to consider/substract the headers offset to make
the posThreshold comparable to the local mouse position.

This solves e.g.
Task-number: QTBUG-14814

Change-Id: If0281cf0c7b98316474f18e8eaa32c6d062dda56
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>

cregit: d625535728154fc9ca576bf6472c6b5057a96f17 https://github.com/qt/qtbase/commit/d625535728154fc9ca576bf6472c6b5057a96f17